apps/jenkins/jenkins/ptl/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: sonarqube
  namespace: jenkins
spec:
  rules:
  - host: sds-sonarqube-webhook.hmcts.net
    http:
      paths:
      - path: /sonarqube-webhook
        backend:
          service:
            name: jenkins
            port:
              number: 8080
        pathType: ImplementationSpecific
